--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -191,6 +191,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="SrcEngine\3D\DebugCamera.cpp" />
+    <ClCompile Include="SrcEngine\Collider\Collision.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\ConsoleWindow.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\DLLObject.cpp" />
@@ -304,6 +305,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\3D\DebugCamera.h" />
+    <ClInclude Include="SrcEngine\Collider\Collision.h" />
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
     <ClInclude Include="SrcEngine\SceneEditor\ConsoleWindow.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLDef.h" />
