仮のドアコライダー作成

--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj.filters
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="Gimmick\GlassCollider.h">
       <Filter>ヘッダー ファイル\Gimmick</Filter>
     </ClInclude>
+    <ClInclude Include="Gimmick\DoorCollider.h">
+      <Filter>ヘッダー ファイル\Gimmick</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TestPlayer.cpp">
@@ -174,6 +177,9 @@
       <Filter>ソース ファイル\Gimmick</Filter>
     </ClCompile>
     <ClCompile Include="Gimmick\GlassCollider.cpp">
+      <Filter>ソース ファイル\Gimmick</Filter>
+    </ClCompile>
+    <ClCompile Include="Gimmick\DoorCollider.cpp">
       <Filter>ソース ファイル\Gimmick</Filter>
     </ClCompile>
   </ItemGroup>
