--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -498,9 +498,6 @@
     <ClCompile Include="SrcEngine\SceneEditor\SpriteObject.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp">
-      <Filter>未分類\ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="SrcEngine\3D\DebugCamera.cpp">
       <Filter>Engine\ソースファイル\3D</Filter>
     </ClCompile>
@@ -521,6 +518,12 @@
     </ClCompile>
     <ClCompile Include="SrcEngine\PostEffect\GrayScale.cpp">
       <Filter>Engine\ソースファイル\PostEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp">
+      <Filter>Engine\ソースファイル\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="SrPostRenderStage.cpp">
+      <Filter>Engine\ソースファイル\Renderer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -857,9 +860,6 @@
     <ClInclude Include="SrcEngine\SceneEditor\SpriteObject.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="SrcEngine\Renderer\SrToonStage.h">
-      <Filter>未分類\ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="SrcEngine\3D\DebugCamera.h">
       <Filter>Engine\ヘッダーファイル\3D</Filter>
     </ClInclude>
@@ -880,6 +880,12 @@
     </ClInclude>
     <ClInclude Include="SrcEngine\PostEffect\GrayScale.h">
       <Filter>Engine\ヘッダーファイル\PostEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="SrcEngine\Renderer\SrToonStage.h">
+      <Filter>Engine\ヘッダーファイル\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="SrPostRenderStage.h">
+      <Filter>Engine\ヘッダーファイル\Renderer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
