--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -194,6 +194,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClCompile Include="SrcEngine\3D\ShadowCaster.cpp" />
     <ClCompile Include="SrcEngine\Collider\Collision.cpp" />
     <ClCompile Include="SrcEngine\PostEffect\GrayScale.cpp" />
+    <ClCompile Include="SrcEngine\Renderer\SrShadowCasterStage.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrUIPlaneModel.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\ConsoleWindow.cpp" />
@@ -312,6 +313,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClInclude Include="SrcEngine\3D\ShadowCaster.h" />
     <ClInclude Include="SrcEngine\Collider\Collision.h" />
     <ClInclude Include="SrcEngine\PostEffect\GrayScale.h" />
+    <ClInclude Include="SrcEngine\Renderer\SrShadowCasterStage.h" />
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
     <ClInclude Include="SrcEngine\Renderer\SrUIPlaneModel.h" />
     <ClInclude Include="SrcEngine\SceneEditor\ConsoleWindow.h" />
@@ -606,6 +608,22 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\ShadowCasterPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\ShadowCasterVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl">
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">5.0</ShaderModel>
@@ -687,6 +705,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     </None>
     <None Include="Assets\Shaders\ShaderMathUtil.hlsli" />
     <None Include="Assets\Shaders\ShaderUtil.hlsli" />
+    <None Include="Assets\Shaders\ShadowCaster.hlsli" />
     <None Include="Assets\Shaders\Sprite.hlsli" />
     <None Include="Assets\Shaders\ToonModel.hlsli" />
     <None Include="cpp.hint" />
