--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -531,6 +531,9 @@
     <ClCompile Include="SrcEngine\3D\ShadowCaster.cpp">
       <Filter>Engine\ソースファイル\3D</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\Renderer\SrShadowCasterStage.cpp">
+      <Filter>Engine\ソースファイル\Renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -899,6 +902,9 @@
     <ClInclude Include="SrcEngine\3D\ShadowCaster.h">
       <Filter>Engine\ヘッダーファイル\3D</Filter>
     </ClInclude>
+    <ClInclude Include="SrcEngine\Renderer\SrShadowCasterStage.h">
+      <Filter>Engine\ヘッダーファイル\Renderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicPS.hlsl">
@@ -982,6 +988,12 @@
     <FxCompile Include="Assets\Shaders\GrayScalePS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\ShadowCasterPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\ShadowCasterVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Basic.hlsli">
@@ -1026,6 +1038,9 @@
     </None>
     <None Include="cpp.hint" />
     <None Include="Assets\Shaders\GrayScale.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\ShadowCaster.hlsli">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
