--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -193,6 +193,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClCompile Include="SrcEngine\3D\DebugCamera.cpp" />
     <ClCompile Include="SrcEngine\3D\ShadowCaster.cpp" />
     <ClCompile Include="SrcEngine\Collider\Collision.cpp" />
+    <ClCompile Include="SrcEngine\PostEffect\GaussianBlur.cpp" />
     <ClCompile Include="SrcEngine\PostEffect\GrayScale.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrShadowCasterStage.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
@@ -312,6 +313,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClInclude Include="SrcEngine\3D\DebugCamera.h" />
     <ClInclude Include="SrcEngine\3D\ShadowCaster.h" />
     <ClInclude Include="SrcEngine\Collider\Collision.h" />
+    <ClInclude Include="SrcEngine\PostEffect\GaussianBlur.h" />
     <ClInclude Include="SrcEngine\PostEffect\GrayScale.h" />
     <ClInclude Include="SrcEngine\Renderer\SrShadowCasterStage.h" />
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
@@ -530,6 +532,22 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\GaussianBlurPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\GaussianBlurVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug_No_Iterator_Check|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="Assets\Shaders\GrayScaleVS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
@@ -697,6 +715,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <None Include="Assets\Shaders\BloomP2.hlsli" />
     <None Include="Assets\Shaders\BloomP3.hlsli" />
     <None Include="Assets\Shaders\Finalize.hlsli" />
+    <None Include="Assets\Shaders\GaussianBlur.hlsli" />
     <None Include="Assets\Shaders\GrayScale.hlsli" />
     <None Include="Assets\Shaders\Line.hlsli" />
     <None Include="Assets\Shaders\NoLight.hlsli" />
