リスポーン地点実装

--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="Gimmick\GlassCollider.h" />
     <ClInclude Include="Player\PlayerCollider.h" />
     <ClInclude Include="Player\PlayerControl.h" />
+    <ClInclude Include="SponePoint.h" />
     <ClInclude Include="StageButton.h" />
     <ClInclude Include="StageDoor.h" />
     <ClInclude Include="UI\SuperUI.h" />
@@ -51,6 +52,7 @@
     <ClCompile Include="Gimmick\GlassCollider.cpp" />
     <ClCompile Include="Player\PlayerCollider.cpp" />
     <ClCompile Include="Player\PlayerControl.cpp" />
+    <ClCompile Include="SponePoint.cpp" />
     <ClCompile Include="StageButton.cpp" />
     <ClCompile Include="StageDoor.cpp" />
     <ClCompile Include="UI\SuperUI.cpp" />
